Updated projects list

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 <a name="open-source-projects-by-mighty-media" class="anchor" href="#open-source-projects-by-mighty-media"><span class="octicon octicon-link"></span></a>Open source projects by Mighty Media</h3>
 
 <ul>
+<li><a href="https://github.com/MightyMedia/Simple-Social-Share">Simple Social Share for jQuery</a></li>
 <li><a href="http://mightymedia.github.io/Mighty-Form-Styler/">Mighty Form Styler for jQuery</a></li>
-<li><a href="https://github.com/MightyMedia/Mighty-form">Mighty Forms for CodeIgniter</a></li>
 </ul>
       </section>
     </div>
