Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Mighty Media : Mighty Media develops websites and applications with CodeIgniter, ExpressionEngine and Wordpress." />
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="description" content="Mighty Media : Mighty Media develops plugins and stuff">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/MightyMedia">View on GitHub</a>
 
           <h1 id="project_title">Mighty Media</h1>
-          <h2 id="project_tagline">Mighty Media develops websites and applications with CodeIgniter, ExpressionEngine and Wordpress.</h2>
+          <h2 id="project_tagline">Mighty Media develops plugins and stuff</h2>
 
         </header>
     </div>
@@ -28,15 +28,15 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
-<a name="mighty-media" class="anchor" href="#mighty-media"><span class="octicon octicon-link"></span></a>Mighty Media</h3>
+<a id="mighty-media" class="anchor" href="#mighty-media" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Mighty Media</h3>
 
 <p>Mighty Media is a small web development company from the south of the Netherlands founded and owned by <a href="https://github.com/basvandenwijngaard">Bas van den Wijngaard</a>.</p>
 
 <h3>
-<a name="open-source-projects-by-mighty-media" class="anchor" href="#open-source-projects-by-mighty-media"><span class="octicon octicon-link"></span></a>Open source projects by Mighty Media</h3>
+<a id="open-source-projects-by-mighty-media" class="anchor" href="#open-source-projects-by-mighty-media" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Open source projects by Mighty Media</h3>
 
 <ul>
-<li><a href="https://github.com/MightyMedia/Simple-Social-Share">Simple Social Share for jQuery</a></li>
+<li><a href="https://github.com/MightyMedia/Simple-Social-Share/">Simple Social Share for jQuery</a></li>
 <li><a href="http://mightymedia.github.io/Mighty-Form-Styler/">Mighty Form Styler for jQuery</a></li>
 </ul>
       </section>
@@ -45,7 +45,7 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
 
