Drop 'for jQuery' addition for Social Simple Share

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <ul>
 <li><a href="http://mightymedia.github.io/Mighty-Form-Styler/">Mighty Form Styler for jQuery</a></li>
-<li><a href="http://mightymedia.github.io/Simple-Social-Share/">Simple Social Share for jQuery</a></li>
+<li><a href="http://mightymedia.github.io/Simple-Social-Share/">Simple Social Share</a></li>
 </ul>
 
       <footer class="site-footer">
